--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "src/assets/styles/main.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/", "src/assets/styles",
+                "node_modules"
+              ]
+            }
           },
           "configurations": {
             "production": {
