--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
+    "@angular/forms": "^7.1.2",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ngx-formly/bootstrap": "^4.8.2",
+    "@ngx-formly/core": "^4.8.2",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
