--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "material-design-icons-iconfont": "^4.0.3",
     "ngx-bootstrap": "^3.1.2",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typescript": "~3.1.6",
