--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/cli": "~7.1.1",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/core": "~7.1.0",
+    "@angular-devkit/build-angular": "~0.11.2",
+    "@angular/animations": "7.1.2",
+    "@angular/cli": "7.1.2",
+    "@angular/common": "7.1.2",
+    "@angular/compiler": "7.1.2",
+    "@angular/compiler-cli": "^7.1.2",
+    "@angular/core": "7.1.2",
     "@angular/forms": "^7.1.2",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/language-service": "~7.1.0",
+    "@angular/language-service": "7.1.2",
+    "@angular/platform-browser": "7.1.2",
+    "@angular/platform-browser-dynamic": "7.1.2",
+    "@angular/router": "7.1.2",
     "@ngx-formly/bootstrap": "^4.8.2",
     "@ngx-formly/core": "^4.8.2",
     "angular-font-awesome": "^3.1.2",
@@ -32,26 +32,28 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "material-design-icons-iconfont": "^4.0.3",
     "ngx-bootstrap": "^3.1.2",
     "path": "^0.12.7",
+    "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "typescript": "~3.1.6",
+    "typescript": "^3.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@types/node": "~10.12.12",
+    "@types/jasmine": "~3.3.1",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0"
