--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "ng build --aot --prod",
+    "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json",
+    "live:documentation": "cd ./documentation && http-server -p 8080"
   },
   "private": true,
   "dependencies": {
@@ -43,9 +45,10 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@types/node": "~10.12.12",
+    "@compodoc/compodoc": "^1.1.7",
     "@types/jasmine": "~3.3.1",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.12.12",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
